fix: file format and deletion
